<resources>
    <!--              Main window       -->
    <string name="app_name">SPU211</string>
    <string name="main_title">Основи Андроід</string>
    <string name="main_calc">Калькулятор</string>
    <string name="main_game">Анимация</string>
    <string name="main_rates_title">Курси валют</string>
    <string name="main_chat_title">Чат</string>

    <!-- region             Animation       -->
    <string name="animation_title">Анимация</string>
    <string name="animation_name_FadeIn">Прозорість</string>
    <string name="animation_name_Scale1">Масштаб 1</string>
    <string name="animation_name_Rotate">Обертання</string>
    <string name="animation_name_Scale2">Масштаб 2</string>
    <!-- endregion -->

    <!-- region Game -->
    <string name="game_title">Гра</string>
    <string name="game_main_text">2048</string>
    <string name="game_score_tpl">SCORE\n%d</string>
    <string name="game_best_score_tpl">BEST\n%d</string>
    <!-- endregion -->


    <!-- region Chat -->
    <string name="chat_title">Чат</string>
    <string name="chat_nik">Nik: </string>
    <string name="chat_nik_default">TIM</string>
    <string name="chat_msg">Msg: </string>
    <string name="chat_semantic_send">Send: </string>
    <string name="chat_msg_default">Привет! </string>
    <!-- endregion -->



    <!-- region             Rates       -->
    <string name="rates_title">Курси валют НБУ</string>
    <!-- endregion -->


    <!-- region             Calculator       -->
    <string name="calc_title">Калькулятор</string>
    <string name="calc_btn_digit_0">ʘ</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>
    <string name="calc_btn_dot">,</string>
    <string name="calc_btn_operation_plus">+</string>
    <string name="calc_btn_operation_minus">—</string>
    <string name="calc_btn_operation_multiply">\u2715</string>
    <string name="calc_btn_operation_divide">\u00F7</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_sign_toggle">+/-</string>
    <string name="calc_btn_clear_C">C</string>
    <string name="calc_btn_clear_entry_CE">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_square">x²</string>
    <string name="calc_btn_sqrt">√x</string>
    <string name="calc_btn_inverse">1/x</string>
    <string name="calc_view_minusSign">\u2212</string>
    <string name="calc_msgMaxDegReached">Max digits</string>
    <string name="calc_msgTwoDots">Max dots reached</string>
    <string name="calc_msgMinusZero">Unsigned Zero</string>
    <string name="calc_msg_overflow">Допустимое значение превышено</string>
    <string name="calc_msg_div_by_zero">Ошибка: Деление на ноль</string>
    <!-- endregion             Game        -->


</resources>