<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/main_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="0.7">

        <Button
            android:id="@+id/main_calc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_calc"
            android:background="@color/main_button_bg"
            android:textColor="@color/main_button_foreground"
            android:textSize="25sp"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/main_anim_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation_title"
            android:background="@color/main_button_bg"
            android:textColor="@color/main_button_foreground"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/main_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            android:background="@color/main_button_bg"
            android:textColor="@color/main_button_foreground"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />

        <Button
            android:id="@+id/main_rates_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_rates_title"
            android:background="@color/main_button_bg"
            android:textColor="@color/main_button_foreground"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:paddingVertical="10dp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>