<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".AnimActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/animation_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:baselineAligned="false"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout style="@style/anim_base_block">

            <LinearLayout
                android:id="@+id/anim_v_alpha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_FadeIn" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout style="@style/anim_base_block">

            <LinearLayout
                android:id="@+id/anim_v_scale1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_Scale1" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout style="@style/anim_base_block">

            <LinearLayout
                android:id="@+id/anim_v_rotate1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_Rotate" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout style="@style/anim_base_block">

            <LinearLayout
                android:id="@+id/anim_v_scale2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_Scale2" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">


        <LinearLayout style="@style/anim_base_block">

            <LinearLayout
                android:id="@+id/anim_v_transe1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_Rotate" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout style="@style/anim_base_block">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/anim_text_block"
                    android:text="@string/animation_name_Rotate" />

                <View style="@style/anim_view_block" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>